# Material-Database-Agent

./: BulkModulus_test_database_MPPolak_DMorgan.xlsx  LICENSE  README.md
marker_pdfs/: QUICK_START.md  README.md  SETUP_SUMMARY.md  VERIFIED_WORKING.md  main.py  pyproject.toml  trigger.txt
result_reproducibility/: README.md
result_reproducibility/table2_meltpoolnet/: README.md  meltpoolnet_lib.py  meltpoolnet_regression.csv  run_all.py
result_reproducibility/table2_meltpoolnet/claude/: evaluate.py  extracted_data_claude.csv  results_reproduced.csv  row_mapping_original_to_reconstructed.csv
result_reproducibility/table2_meltpoolnet/glm/: evaluate.py  extracted_data_glm.csv  results_reproduced.csv  same_row_mapping_100_manual.csv
result_reproducibility/table2_meltpoolnet/gpt52/: evaluate.py  extracted_data_codex.csv  results_reproduced.csv  row_mapping_original_to_reconstructed.csv
result_reproducibility/table2_meltpoolnet/gpt54/: evaluate.py  extracted_data_codex_gpt54.csv  results_reproduced.csv  row_mapping_original_to_reconstructed_codex_gpt54.csv
result_reproducibility/table2_meltpoolnet/qwen/: evaluate.py  extracted_data_qwen.csv  results_reproduced.csv  row_mapping_100_same_rows.csv
result_reproducibility/table3_hea_cca/: README.md  hea_lib.py  run_all.py  table_1.csv
result_reproducibility/table3_hea_cca/claude/: evaluate.py  refractory_hea_data.csv  results_reproduced.csv  row_mapping_100.txt
result_reproducibility/table3_hea_cca/glm/: evaluate.py  refractory_data.csv  results_reproduced.csv  row_mapping_100.txt
(+12 files in other folders)
