[project]
name = "marker-pdfs"
version = "0.1.0"
description = "MCP server for converting individual PDFs to markdown with images enabled"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marker-pdf>=1.10.1",
    "mcp[cli]>=1.24.0",
    "psutil>=7.1.3",
    "setuptools>=80.0.0",
]
